--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background-color: #f5f5f5;
-      padding-top: 70px; /* space for fixed nav */
+      padding-top: 70px;
     }
 
     nav {
@@ -75,7 +75,7 @@
 
     .project-item a {
       display: block;
-      margin-top: 1em;
+      margin-top: 0.5em;
       color: #0077cc;
       text-decoration: none;
       font-weight: bold;
@@ -123,28 +123,54 @@
       <img src="speciation.jpeg" alt="Drivers of Speciation">
       <div>
         <h3>What Fuels the Tree of Life? Uncovering the Drivers of Speciation</h3>
-        <p>Exploring how different evolutionary, ecological, and historical factors drive the diversification of species across lineages and regions.</p>
-        <a href="https://doi.org/10.xxxx/speciation-paper">📄 Publication</a>
+        <p>
+          This project explores variation in speciation rates across clades of terrestrial vertebrates, aiming to identify the
+          ecological, environmental, and life-history factors that drive diversification. Using phylogenetic and comparative methods,
+          it seeks to reveal consistent predictors of high speciation rates and enhance our understanding of biodiversity patterns.
+        </p>
+        <a href="https://www.nature.com/articles/s41467-023-41812-7" target="_blank">
+          <i class="fas fa-file-pdf"></i> View publication 1
+        </a>
+        <a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/geb.13167" target="_blank">
+          <i class="fas fa-file-pdf"></i> View publication 2
+        </a>
       </div>
     </div>
 
     <!-- Project 2 -->
     <div class="project-item">
-      <img src="extinction.jpeg" alt="Extinction Dynamics">
+      <img src="ldg.jpeg" alt="Species Richness Patterns">
       <div>
-        <h3>Understanding Extinction: Historical Patterns and Modern Risks</h3>
-        <p>Investigating the causes and consequences of species extinction in deep time and contemporary ecosystems.</p>
-        <a href="https://doi.org/10.xxxx/extinction-paper">📄 Publication</a>
+        <h3>Causes of Species Richness Patterns Across Space, Time, and Clades</h3>
+        <p>
+          This project explores the factors that drive variations in biodiversity across different regions and clades. By examining
+          historical, evolutionary, and ecological factors in innovative ways, this project aims to uncover the secrets behind
+          the dramatic geographic and phylogenetic variation of life on Earth.
+        </p>
+        <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13559" target="_blank">
+          <i class="fas fa-file-pdf"></i> View publication 1
+        </a>
+        <a href="https://www.journals.uchicago.edu/doi/full/10.1086/716171" target="_blank">
+          <i class="fas fa-file-pdf"></i> View publication 2
+        </a>
       </div>
     </div>
 
     <!-- Project 3 -->
     <div class="project-item">
-      <img src="niche.jpeg" alt="Niche Evolution and Environmental Change">
+      <img src="color.jpeg" alt="Animal Coloration">
       <div>
-        <h3>Environmental Change and Niche Evolution in Tetrapods</h3>
-        <p>Evaluating how climatic and environmental shifts impact ecological niche evolution and species' distributions through time.</p>
-        <a href="https://doi.org/10.xxxx/niche-paper">📄 Publication</a>
+        <h3>Evolution and Function of Animal Coloration</h3>
+        <p>
+          Coloration is one of the most notable characteristics of animals, yet its adaptive significance remains underexplored.
+          This project investigates the diverse roles and evolutionary origins of coloration, with a particular focus on mammals.
+        </p>
+        <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13802" target="_blank">
+          <i class="fas fa-file-pdf"></i> View publication 1
+        </a>
+        <a href="https://academic.oup.com/evolut/article/74/9/2046/6727281" target="_blank">
+          <i class="fas fa-file-pdf"></i> View publication 2
+        </a>
       </div>
     </div>
   </section>
