--- a/projects.html
+++ b/projects.html
@@ -75,10 +75,9 @@
 
     .project-item a {
       display: block;
-      margin-top: 0.5em;
-      color: #0077cc;
-      text-decoration: none;
-      font-weight: bold;
+      margin-top: 1em;
+      width: 100px;
+      height: auto;
     }
 
     .intro-box {
@@ -129,10 +128,10 @@
           it seeks to reveal consistent predictors of high speciation rates and enhance our understanding of biodiversity patterns.
         </p>
         <a href="https://www.nature.com/articles/s41467-023-41812-7" target="_blank">
-          <i class="fas fa-file-pdf"></i> View publication 1
+          <img src="nature_logo.png" alt="Nature Journal Logo">
         </a>
         <a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/geb.13167" target="_blank">
-          <i class="fas fa-file-pdf"></i> View publication 2
+          <img src="wiley_logo.png" alt="Wiley Journal Logo">
         </a>
       </div>
     </div>
@@ -148,10 +147,10 @@
           the dramatic geographic and phylogenetic variation of life on Earth.
         </p>
         <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13559" target="_blank">
-          <i class="fas fa-file-pdf"></i> View publication 1
+          <img src="wiley_logo.png" alt="Wiley Journal Logo">
         </a>
         <a href="https://www.journals.uchicago.edu/doi/full/10.1086/716171" target="_blank">
-          <i class="fas fa-file-pdf"></i> View publication 2
+          <img src="uchicago_logo.png" alt="University of Chicago Press Logo">
         </a>
       </div>
     </div>
@@ -166,10 +165,10 @@
           This project investigates the diverse roles and evolutionary origins of coloration, with a particular focus on mammals.
         </p>
         <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13802" target="_blank">
-          <i class="fas fa-file-pdf"></i> View publication 1
+          <img src="wiley_logo.png" alt="Wiley Journal Logo">
         </a>
         <a href="https://academic.oup.com/evolut/article/74/9/2046/6727281" target="_blank">
-          <i class="fas fa-file-pdf"></i> View publication 2
+          <img src="oup_logo.png" alt="Oxford University Press Logo">
         </a>
       </div>
     </div>
