--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
       align-items: center;
     }
 
-    .project-item img {
+    .project-item img.project-img {
       width: 100%;
       max-height: 200px;
       object-fit: cover;
@@ -73,13 +73,6 @@
       text-align: justify;
     }
 
-    .project-item a {
-      display: block;
-      margin-top: 1em;
-      width: 100px;
-      height: auto;
-    }
-
     .intro-box {
       border: 1px solid #ddd;
       padding: 1.5em;
@@ -91,6 +84,20 @@
     .intro-box p {
       text-align: justify;
       margin: 0;
+    }
+
+    .logo-row {
+      display: flex;
+      gap: 1em;
+      justify-content: center;
+      margin-top: 1em;
+      flex-wrap: wrap;
+    }
+
+    .logo-row img {
+      width: 100px;
+      height: auto;
+      object-fit: contain;
     }
   </style>
 </head>
@@ -119,7 +126,7 @@
 
     <!-- Project 1 -->
     <div class="project-item">
-      <img src="speciation.jpeg" alt="Drivers of Speciation">
+      <img src="speciation.jpeg" alt="Drivers of Speciation" class="project-img">
       <div>
         <h3>What Fuels the Tree of Life? Uncovering the Drivers of Speciation</h3>
         <p>
@@ -127,18 +134,20 @@
           ecological, environmental, and life-history factors that drive diversification. Using phylogenetic and comparative methods,
           it seeks to reveal consistent predictors of high speciation rates and enhance our understanding of biodiversity patterns.
         </p>
-        <a href="https://www.nature.com/articles/s41467-023-41812-7" target="_blank">
-          <img src="nature_logo.png" alt="Nature Journal Logo">
-        </a>
-        <a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/geb.13167" target="_blank">
-          <img src="wiley_logo.png" alt="Wiley Journal Logo">
-        </a>
+        <div class="logo-row">
+          <a href="https://www.nature.com/articles/s41467-023-41812-7" target="_blank">
+            <img src="nature_logo.png" alt="Nature Logo">
+          </a>
+          <a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/geb.13167" target="_blank">
+            <img src="geb_logo.png" alt="GEB Logo">
+          </a>
+        </div>
       </div>
     </div>
 
     <!-- Project 2 -->
     <div class="project-item">
-      <img src="ldg.jpeg" alt="Species Richness Patterns">
+      <img src="ldg.jpeg" alt="Species Richness Patterns" class="project-img">
       <div>
         <h3>Causes of Species Richness Patterns Across Space, Time, and Clades</h3>
         <p>
@@ -146,30 +155,34 @@
           historical, evolutionary, and ecological factors in innovative ways, this project aims to uncover the secrets behind
           the dramatic geographic and phylogenetic variation of life on Earth.
         </p>
-        <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13559" target="_blank">
-          <img src="wiley_logo.png" alt="Wiley Journal Logo">
-        </a>
-        <a href="https://www.journals.uchicago.edu/doi/full/10.1086/716171" target="_blank">
-          <img src="uchicago_logo.png" alt="University of Chicago Press Logo">
-        </a>
+        <div class="logo-row">
+          <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13559" target="_blank">
+            <img src="geb_logo.png" alt="GEB Logo">
+          </a>
+          <a href="https://www.journals.uchicago.edu/doi/full/10.1086/716171" target="_blank">
+            <img src="amnat_logo.png" alt="Am Nat Logo">
+          </a>
+        </div>
       </div>
     </div>
 
     <!-- Project 3 -->
     <div class="project-item">
-      <img src="color.jpeg" alt="Animal Coloration">
+      <img src="color.jpeg" alt="Animal Coloration" class="project-img">
       <div>
         <h3>Evolution and Function of Animal Coloration</h3>
         <p>
           Coloration is one of the most notable characteristics of animals, yet its adaptive significance remains underexplored.
           This project investigates the diverse roles and evolutionary origins of coloration, with a particular focus on mammals.
         </p>
-        <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13802" target="_blank">
-          <img src="wiley_logo.png" alt="Wiley Journal Logo">
-        </a>
-        <a href="https://academic.oup.com/evolut/article/74/9/2046/6727281" target="_blank">
-          <img src="oup_logo.png" alt="Oxford University Press Logo">
-        </a>
+        <div class="logo-row">
+          <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13802" target="_blank">
+            <img src="geb_logo.png" alt="GEB Logo">
+          </a>
+          <a href="https://academic.oup.com/evolut/article/74/9/2046/6727281" target="_blank">
+            <img src="evolution_logo.png" alt="Evolution Journal Logo">
+          </a>
+        </div>
       </div>
     </div>
   </section>
