--- a/projects.html
+++ b/projects.html
@@ -157,7 +157,7 @@
         </p>
         <div class="logo-row">
           <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13559" target="_blank">
-            <img src="geb_logo.png" alt="GEB Logo">
+            <img src="geb_logo2.png" alt="GEB Logo">
           </a>
           <a href="https://www.journals.uchicago.edu/doi/full/10.1086/716171" target="_blank">
             <img src="amnat_logo.png" alt="Am Nat Logo">
@@ -177,7 +177,7 @@
         </p>
         <div class="logo-row">
           <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13802" target="_blank">
-            <img src="geb_logo.png" alt="GEB Logo">
+            <img src="geb_logo3.png" alt="GEB Logo">
           </a>
           <a href="https://academic.oup.com/evolut/article/74/9/2046/6727281" target="_blank">
             <img src="evolution_logo.png" alt="Evolution Journal Logo">
