--- a/index.html
+++ b/index.html
@@ -1,89 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Felipe O. Cerezer - Home</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        .profile-section {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: flex-start;
-            gap: 3rem;
-            padding: 3rem 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .left-column {
-            flex: 0 0 280px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .profile-img {
-            width: 100%;
-            max-width: 280px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-
-        .social-icons {
-            margin-top: 1.5rem;
-            display: flex;
-            gap: 10px;
-            justify-content: center;
-        }
-
-        .social-icons img {
-            width: 36px;
-            height: 36px;
-        }
-
-        .right-column {
-            flex: 1;
-            min-width: 300px;
-        }
-
-        .profile-name {
-            font-size: 2rem;
-            font-weight: bold;
-            margin-bottom: 0.5rem;
-        }
-
-        h3 {
-            margin-top: 0;
-            font-weight: normal;
-            color: #555;
-        }
-
-        .footer-links {
-            margin-top: 2rem;
-        }
-
-        .footer-links a {
-            text-decoration: none;
-            color: #007acc;
-        }
-
-        .footer-links a:hover {
-            text-decoration: underline;
-        }
-
-        nav a {
-            margin-right: 1rem;
-            text-decoration: none;
-            color: #333;
-        }
-
-        nav a:hover {
-            color: #007acc;
-        }
-    </style>
 </head>
 <body>
 
@@ -99,10 +21,11 @@
 
     <!-- Main Content Section -->
     <section class="profile-section">
-        <!-- Left Column: Photo + Social Icons -->
+        <!-- Left Column: Photo -->
         <div class="left-column">
             <img src="profile_pic.jpeg" alt="Felipe O. Cerezer" class="profile-img">
-
+            
+            <!-- Social Icons below the profile picture -->
             <div class="social-icons">
                 <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
                     <img src="google.svg" alt="Google Scholar">
