--- a/projects.html
+++ b/projects.html
@@ -104,10 +104,10 @@
 
 <body>
   <nav>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#publications">Publications</a>
-    <a href="#contact">Contact</a>
+    <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="publications.html">Publications</a>
+                       <a href="about.html">About</a>
   </nav>
 
   <section class="section-container" id="about">
