--- a/index.html
+++ b/index.html
@@ -1,64 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Felipe O. Cerezer - Home</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Felipe O. Cerezer - Home</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-    <!-- Header Navigation -->
-    <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="publications.html">Publications</a>
-            <a href="about.html">About</a>
-        </nav>
-    </header>
+  <!-- Fixed Header -->
+  <header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="publications.html">Publications</a>
+      <a href="about.html">About</a>
+    </nav>
+  </header>
 
-    <!-- Main Content Section -->
-    <section class="home-profile-section">
-        <!-- Left Column: Photo -->
-        <div class="home-left-column">
-            <img src="profile_pic.jpeg" alt="Felipe O. Cerezer" class="home-profile-img">
-            
-            <!-- Social Icons below the profile picture -->
-            <div class="home-social-icons">
-                <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
-                    <img src="google.svg" alt="Google Scholar">
-                </a>
-                <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate">
-                </a>
-                <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
-                    <img src="bluesky.svg" alt="Bluesky">
-                </a>
-            </div>
-        </div>
+  <!-- Main Profile Section -->
+  <section class="home-container">
+    <!-- Left Column -->
+    <div class="home-left">
+      <img src="profile_pic.jpeg" alt="Felipe O. Cerezer" class="home-profile-img" />
+      <div class="home-social-icons">
+        <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
+          <img src="google.svg" alt="Google Scholar" />
+        </a>
+        <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate" />
+        </a>
+        <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
+          <img src="bluesky.svg" alt="Bluesky" />
+        </a>
+      </div>
+    </div>
 
-        <!-- Right Column: Text Content -->
-        <div class="home-right-column">
-            <div class="home-profile-name">Felipe O. Cerezer</div>
-
-            <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
-
-            <p>
-                Welcome!<br><br>
-                I am a Brazilian scientist passionate about understanding the diversity of life on Earth. 
-                My research in macroecology, evolutionary biology, and biogeography uncovers the amazing patterns 
-                and processes that sculpt biodiversity among clades, regions, and time. 
-                Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!
-            </p>
-
-            <div class="home-footer-links">
-                <p>If you're interested in learning more or collaborating, feel free to reach out.</p>
-                <a href="CV_Felipe_Cerezer.pdf" target="_blank" title="Download CV">For more details, check out my CV (PDF)</a>
-            </div>
-        </div>
-    </section>
+    <!-- Right Column -->
+    <div class="home-right">
+      <h1 class="home-name">Felipe O. Cerezer</h1>
+      <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
+      <p>
+        Welcome!<br><br>
+        I am a Brazilian scientist passionate about understanding the diversity of life on Earth. 
+        My research in macroecology, evolutionary biology, and biogeography uncovers the amazing patterns 
+        and processes that sculpt biodiversity among clades, regions, and time. 
+        Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!
+      </p>
+      <p>
+        If you're interested in learning more or collaborating, feel free to reach out.<br>
+        <a href="CV_Felipe_Cerezer.pdf" target="_blank">Download my CV (PDF)</a>
+      </p>
+    </div>
+  </section>
 
 </body>
 </html>
