--- a/index.html
+++ b/index.html
@@ -22,27 +22,26 @@
     <!-- Main Content Section -->
     <section class="profile-section">
         <!-- Left Column: Photo -->
-        <div class="left-column">
-            <img src="profile_pic.jpeg" alt="Felipe O. Cerezer" class="profile-img">
+        <article class="left-column">
+            <img src="profile_pic.jpeg" alt="Profile picture of Felipe O. Cerezer, Brazilian scientist" class="profile-img">
             
-            <!-- Social Icons below the profile picture -->
+            <!-- Social Media Links -->
             <div class="social-icons">
-                <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Google Scholar">
+                <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Visit Felipe O. Cerezer's Google Scholar profile">
                     <img src="google.svg" alt="Google Scholar">
                 </a>
-                <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="ResearchGate">
+                <a href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf" target="_blank" title="Visit Felipe O. Cerezer's ResearchGate profile">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate">
                 </a>
-                <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Bluesky">
+                <a href="https://bsky.app/profile/cerezer.bsky.social" target="_blank" title="Visit Felipe O. Cerezer's Bluesky profile">
                     <img src="bluesky.svg" alt="Bluesky">
                 </a>
             </div>
-        </div>
+        </article>
 
         <!-- Right Column: Text Content -->
-        <div class="right-column">
-            <div class="profile-name">Felipe O. Cerezer</div>
-
+        <article class="right-column">
+            <h1 class="profile-name">Felipe O. Cerezer</h1>
             <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
 
             <p>
@@ -53,11 +52,11 @@
                 Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!
             </p>
 
-            <div class="footer-links">
+            <footer class="footer-links">
                 <p>If you're interested in learning more or collaborating, feel free to reach out.</p>
-                <a href="CV_Felipe_Cerezer.pdf" target="_blank" title="Download CV">For more details, check out my CV (PDF)</a>
-            </div>
-        </div>
+                <a href="CV_Felipe_Cerezer.pdf" target="_blank" title="Download Felipe O. Cerezer's CV (PDF)">For more details, check out my CV (PDF)</a>
+            </footer>
+        </article>
     </section>
 
 </body>
