--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="profile-section">
         <!-- Left Column: Photo -->
         <article class="left-column">
-            <img src="profile_pic.jpeg" alt="Profile picture of Felipe O. Cerezer, Brazilian scientist" class="profile-img">
+            <img src="profile_pic.jpeg" alt="Profile picture of Felipe O. Cerezer, Brazilian scientist" class="profile-img" style="width: 250px; height: auto;">
             
             <!-- Social Media Links -->
             <div class="social-icons">
