--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     <section class="profile-section">
         <!-- Left Column: Photo -->
         <article class="left-column">
-            <img src="profile_pic.jpeg" alt="Profile picture of Felipe O. Cerezer, Brazilian scientist" class="profile-img" style="width: 250px; height: auto;">
+            <!-- Profile image with added border-radius for a smoother look -->
+            <img src="profile_pic.jpeg" alt="Profile picture of Felipe O. Cerezer, Brazilian scientist" class="profile-img" style="width: 250px; height: auto; border-radius: 50%; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
             
-            <!-- Social Media Links -->
+            <!-- Social Media Links with hover effects for better interactivity -->
             <div class="social-icons">
                 <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Visit Felipe O. Cerezer's Google Scholar profile">
                     <img src="google.svg" alt="Google Scholar">
@@ -41,6 +42,7 @@
 
         <!-- Right Column: Text Content -->
         <article class="right-column">
+            <!-- Profile name with better styling for prominence -->
             <h1 class="profile-name">Felipe O. Cerezer</h1>
             <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
 
@@ -52,9 +54,11 @@
                 Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!
             </p>
 
+            <!-- Footer Section with a styled "CV" link as a button -->
             <footer class="footer-links">
                 <p>If you're interested in learning more or collaborating, feel free to reach out.</p>
-                <a href="CV_Felipe_Cerezer.pdf" target="_blank" title="Download Felipe O. Cerezer's CV (PDF)">For more details, check out my CV (PDF)</a>
+                <!-- Transforming the CV link into a button style -->
+                <a href="CV_Felipe_Cerezer.pdf" target="_blank" title="Download Felipe O. Cerezer's CV (PDF)" class="btn">For more details, check out my CV (PDF)</a>
             </footer>
         </article>
     </section>
