--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
     <section class="profile-section">
         <!-- Left Column: Photo -->
         <article class="left-column">
-            <!-- Profile image with added border-radius for a smoother look -->
-            <img src="profile_pic.jpeg" alt="Profile picture of Felipe O. Cerezer, Brazilian scientist" class="profile-img" style="width: 250px; height: auto; border-radius: 50%; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+            <img src="profile_pic.jpeg" alt="Profile picture of Felipe O. Cerezer, Brazilian scientist" class="profile-img" style="width: 300px; height: auto;">
             
-            <!-- Social Media Links with hover effects for better interactivity -->
+            <!-- Social Media Links -->
             <div class="social-icons">
                 <a href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR" target="_blank" title="Visit Felipe O. Cerezer's Google Scholar profile">
                     <img src="google.svg" alt="Google Scholar">
@@ -42,23 +41,18 @@
 
         <!-- Right Column: Text Content -->
         <article class="right-column">
-            <!-- Profile name with better styling for prominence -->
             <h1 class="profile-name">Felipe O. Cerezer</h1>
             <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
 
             <p>
-                Welcome!<br><br>
-                I am a Brazilian scientist passionate about understanding the diversity of life on Earth. 
-                My research in macroecology, evolutionary biology, and biogeography uncovers the amazing patterns 
-                and processes that sculpt biodiversity among clades, regions, and time. 
-                Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!
+                Welcome to my website! I'm a Brazilian scientist dedicated to exploring the complex patterns and processes that shape biodiversity across the globe. My work focuses on macroecology, evolutionary biology, and biogeography, with an emphasis on understanding how ecological and evolutionary factors influence species diversity across time and space.  
+                <br><br>
+                Through my research, I aim to uncover the underlying mechanisms that drive life’s diversity, from the patterns of adaptation to the evolutionary histories that have shaped the species we see today. Join me as I explore the fascinating interplay between environment, evolution, and the diversity of life on Earth!
             </p>
 
-            <!-- Footer Section with a styled "CV" link as a button -->
             <footer class="footer-links">
                 <p>If you're interested in learning more or collaborating, feel free to reach out.</p>
-                <!-- Transforming the CV link into a button style -->
-                <a href="CV_Felipe_Cerezer.pdf" target="_blank" title="Download Felipe O. Cerezer's CV (PDF)" class="btn">For more details, check out my CV (PDF)</a>
+                <a href="CV_Felipe_Cerezer.pdf" target="_blank" title="Download Felipe O. Cerezer's CV (PDF)">For more details, check out my CV (PDF)</a>
             </footer>
         </article>
     </section>
